--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/cli": "^2.12.2",
     "next": "11.0.1",
+    "next-sanity": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
